--- a/blog-app/src/main/resources/application.properties
+++ b/blog-app/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/blog_app_apis
 spring.datasource.username=root
-spring.datasource.password=iamashutosh44
+spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Hibernate Properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
